[package]
name = "cmaes"
version = "0.2.2"
edition = "2021"
description = "An implementation of the CMA-ES optimization algorithm."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/cmaes"
repository = "https://github.com/pengowen123/cmaes"


[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.1"
nalgebra = "0.33"
statrs = "0.18"


[dev-dependencies]
assert_approx_eq = "1.1"

